ISSUE(tsi/mini-map): Moved overflow:hidden to com root element

--- a/styles/deps/element-ui/custom-message.sass
+++ b/styles/deps/element-ui/custom-message.sass
@@ -61,6 +61,8 @@
     box-shadow: inset 0px -6px 0px #e9dbcf
 
   &--error
+    // @FIXME: Find a better way to stretch container on mobile
+    min-width: 300px
     &:after
       background-color: #f2e3e0
     box-shadow: inset 0px -6px 0px #f7d8d8
